add get beer api for testing
